PreferenceUtils、新手引导界面、小圆点的实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".GideActivity" >
+        <activity android:name=".GuideActivity" >
 
         </activity>
         <activity android:name=".MainActivity"></activity>
