--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile files('libs/nineoldandroids-2.4.0.jar')
+    compile files('libs/xUtils-2.6.14.jar')
+    compile files('libs/gson-2.3.1.jar')
+    compile files('libs/org.apache.http.legacy.jar')
 }
+
